--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 ---
 layout: default
-title: Hello World
-categories: demo
-tags: demo
+title: CodingME!
 ---
 <!-- This loops through the paginated posts -->
 {% for post in paginator.posts %}
@@ -18,26 +16,51 @@ tags: demo
 {% endfor %}
 
 <!-- Pagination links -->
-<div>
-<ul class="pager">
-    <li class="previous">
-      {% if paginator.previous_page %}
-        <a href="/page{{ paginator.previous_page }}">Prev</a>
-      {% else %}
-        <a href="#">Prev</a>
-      {% endif %}
-    </li>
-    
-    <!-- 
-      <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
-    -->
 
-    <li class="next">
-      {% if paginator.next_page %}
-        <a href="/page{{ paginator.next_page }}">Next</a>
+<div id="post-pagination" class="pagination">
+  <ul class="pages">
+
+  {% if paginator.previous_page %}
+      <li class="eabled">
+      {% if paginator.previous_page == 1 %}
+        <a href="/">Previous</a>
       {% else %}
-        <a href="#">Next</a>
+        <a href="{{ paginator.previous_page_path }}">Previous</a>
+      {% endif %}
+      </li>
+  {% else %}
+      <li class="disabled">
+        <a href="/">Previous</a>
+      </li>
+  {% endif %}
+
+  <li class="page">
+    {% if paginator.page == 1 %}
+      <span class="current-page">1</span>
+    {% else %}
+      <a href="/">1</a>
+    {% endif %}
+  </li>
+
+  {% for count in (2..paginator.total_pages) %}
+    <li class="page">
+      {% if count == paginator.page %}
+        <span class="current-page">{{ count }}</span>
+      {% else %}
+        <a href="/page{{ count }}">{{ count }}</a>
       {% endif %}
     </li>
-</ul>
+  {% endfor %}
+
+  {% if paginator.next_page %}
+    <li class="eabled">
+      <a href="{{ paginator.next_page_path }}">Next</a>
+    </li>
+  {% else %}
+    <li class="disabled">
+      <span>Next</span>
+    </li>
+  {% endif %}
+  </ul>
+
 </div>
