update font-size of titles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: CodingME!
   </p>
   <!--
   -->
-  <div class="content">
+  <div class="paginator_content" id="paginator_content">
     {{ post.content }}
   </div>
 {% endfor %}
