--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: CodingME!
 {% for post in paginator.posts %}
   <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
   <p class="author">
-    <span class="date">{{ post.date }}</span>
+    <span class="date">{{ post.date | date_to_rfc822 }}</span>
   </p>
   <!--
   -->
