--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@ title: CodingME!
   <!--
   -->
   <div class="paginator_content" id="paginator_content">
-    {{ post.content }}
+    {% if post.content contains '<!--more-->' %}
+      {{ post.content | split:'<!--more-->' | first }}
+    {% else %}
+      {{post.content | truncatewords:50 | strip_html}}
+    {% endif %}
   </div>
 {% endfor %}
 
@@ -25,7 +29,7 @@ title: CodingME!
       {% if paginator.previous_page == 1 %}
         <a href="/">Previous</a>
       {% else %}
-        <a href="{{ paginator.previous_page_path }}">Previous</a>
+        <a href="/page{{ paginator.previous_page }}">Previous</a>
       {% endif %}
       </li>
   {% else %}
@@ -54,7 +58,7 @@ title: CodingME!
 
   {% if paginator.next_page %}
     <li class="eabled">
-      <a href="{{ paginator.next_page_path }}">Next</a>
+      <a href="/page{{ paginator.next_page }}">Next</a>
     </li>
   {% else %}
     <li class="disabled">
